--- a/public/chat.html
+++ b/public/chat.html
@@ -1,9 +1,65 @@
-<script src="/socket.io/socket.io.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+<!-- style -->
+<style>
+    input {
+        width: 100%;
+        height: 35px;
+    }
+
+    .window {
+        margin-top: 10px;
+    }
+
+    .list-group {
+        margin-top: 50px;
+    }
+
+    #messages li:nth-child(odd) {
+        background: #E5FFCC;
+    }
+</style>
+
+<!-- html -->
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 window">
+            <form id="message-form">
+                <div class="col-sm-10">
+                    <input id="user-message" type="text" placeholder="Enter your msg">
+                </div>
+                <div class="col-sm-2">
+                    <input class="btn btn-primary" type="submit" value="Send!">
+                </div>
+            </form>
+            <ul class="list-group" id="messages">
+                <!-- populeted by js -->
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!-- js -->
+<script src="/socket.io/socket.io.js"></script>
 <script>
     const socket = io('http://localhost:9000');
+
     socket.on('messageFromServer', dataFromServer => {
         console.log(dataFromServer);
-        socket.emit('dataToServer', { data: 'Data from client!' });
+        socket.emit('dataToServer', { mySocketId: socket.id });
+    });
+
+    socket.on('messageToClients', msg => {
+        let msgs = document.querySelector('#messages')
+        msgs.innerHTML = msgs.innerHTML + `<li class="list-group-item">${msg.id} - ${msg.text}</li>`; 
+    });
+
+    document.querySelector('#message-form').addEventListener('submit', evenet => {
+        event.preventDefault();
+        const msg = document.querySelector('#user-message').value;
+        socket.emit('newMessageToServer', {
+            id: socket.id,
+            text: msg
+        });
     });
 </script>
